# learning-gtest

./: CMakeLists.txt  README.md
.github/workflows/: testing.yml
app/: app.cc
lib/: FileLogger.hh  INoise.hh  Ilogger.hh  algebraClass.cc  algebraClass.hh  class.cc  class.hh
tst/: dep_mock.hh  logger_mock.hh  noise_mock.hh  tst.cc  tst_log.cc
